Add zinc run, zinc build <dir>, multi-file cross-file compilation
CLI:
- zinc run <file.zn> — compile → javac → execute in one command
- zinc build <file.zn|dir> [-o outdir] — compile to Java
- Subcommand dispatch: build, run

Multi-file compilation:
- Two-pass: parse all files, collect interface/class names, then transform
- Cross-file interface registration for correct extends/implements
- newCU() helper ensures java.util.* imports on all generated files
- emitDeclToUnits() centralizes per-declaration CU creation

javac/java integration:
- ProcessBuilder for javac --enable-preview --source 25
- ProcessBuilder with inheritIO for java execution
- Main class detection via source scanning

234 tests (69 lexer + 56 parser + 95 transformer + 14 e2e), all passing.
zinc-flow multi-file build compiles (missing only external Javalin dep).

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>